# bear-alarm

./: .dockerignore  .gitignore  Bear Alarm.spec  Dockerfile  MACOS_APP.md  README.md  config.yaml.example  create-app.sh  docker-compose.yml  pyproject.toml  run.sh
alerts/: README.txt
resources/icons/: AppIcon.icns
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1  build.py  create-desktop-entry.sh
src/: __init__.py  alerts.py  cli.py  config.py  dexcom_client.py  main.py  main_qt.py
src/core/: __init__.py  alerts.py  config.py  dexcom_client.py  emergency.py  monitor.py  paths.py  system.py
src/data/: __init__.py  database.py  models.py
src/ui/: __init__.py  app.py  theme.py
src/ui/views/: __init__.py  contacts.py  dashboard.py  history.py  rules.py  settings.py
src/ui_qt/: __init__.py  app.py  theme.py
src/ui_qt/views/: __init__.py  contacts.py  dashboard.py  history.py  rules.py  settings.py
