[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bear-alarm"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydexcom>=0.2.3",
    "pyyaml>=6.0.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pygame>=2.5.0",
]

[project.scripts]
bear-alarm = "src.main:main"

